<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:text="@string/calc_text"
        android:gravity="end|bottom"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <Button
                android:onClick="onDigit"
                android:layout_margin="2dp"
                android:id="@+id/sevenBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7"
                />
            <Button
                android:onClick="onDigit"
                android:layout_margin="2dp"
                android:id="@+id/eightBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8"
                />
            <Button
                android:onClick="onDigit"
                android:layout_margin="2dp"
                android:id="@+id/nineBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9"
                />
            <Button
                android:onClick="onOperator"
                android:layout_margin="2dp"
                android:id="@+id/divideBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="/"
                />

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/fourBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            />
        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/fiveBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            />
        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/sixBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            />
        <Button
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:id="@+id/multiplyBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            />

    </LinearLayout>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/oneBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            />
        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/twoBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            />
        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/threeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            />
        <Button
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:id="@+id/minusBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/zeroBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            />
        <Button
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"
            android:id="@+id/deicmalBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            />

        <Button
            android:onClick="onClear"
            android:layout_margin="2dp"
            android:id="@+id/clearBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            />
        <Button
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:id="@+id/plusBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:onClick="onEqual"
            android:layout_margin="2dp"
            android:id="@+id/equalBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/equal"
            />



    </LinearLayout>

</LinearLayout>